--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -24,6 +24,12 @@
   transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
 }
 
+#home {
+  text-align:center;
+  display: flex;
+  justify-content: center;
+}
+
 .card-category img {
   object-fit: cover;
   width: 100%;
