Completed whole challenge

--- a/app/views/categories/new.html.erb
+++ b/app/views/categories/new.html.erb
@@ -3,6 +3,7 @@
     <%= simple_form_for @category do |f| %>
     Add a new category
     <%= f.input :name, placeholder: "The category name..." %>
+    <%= f.input :photo, as: :file %>
     <%= f.submit %>
     <% end %>
   </div>
