--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,5 +1,5 @@
 
-<div class="banner" style= "background-image: url('<%= image_path "category_backgroud.jpg"%> ');">
+<div class="banner" style= "background-image: url('<%= cl_image_path @category.photo.key, height: 300, width: 400, crop: :fill %>');">
   <div class="container">
     <h1><%= @category.name %></h1>
   </div>
