--- a/app/views/shared/_banner.html.erb
+++ b/app/views/shared/_banner.html.erb
@@ -1,7 +1,9 @@
-<div class="banner" style= "background-image: url('<%= image_path "cookbook_home.jpg"%> ');">
+<div class="banner" style= "background-image: url('<%= image_path "banner_im.jpg"%>');">
   <div class="container">
     <h1>Cookbook</h1>
     <p>Save all your favourite recipes <em>(As long as they are in the list provided)</em></p>
     <%= link_to "Create Category", new_category_path , class: "btn btn-flat" %>
   </div>
 </div>
+
+<%# <%= cl_image_path("cld-sample-3", width: 400, height: 300, crop: :fill) %>
