--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,7 +1,7 @@
 <div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
   <div class="container-fluid">
     <%= link_to root_path do  %>
-      <%= image_tag 'cookbook logo.jpg', id: 'navbar-logo' %>
+      <%= image_tag("https://res.cloudinary.com/dklvfhnqh/image/upload/v1736946595/jt2i0ddrajc4u7pjxeik.jpg", width: 40, height: 40, crop: :fill) %>
     <% end %>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
